// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Breadcrumb Overflow 1`] = `
<div
  dir="ltr"
>
  

  <nav
    aria-label="overflowing product breadcrumbs"
  >
    
    
    <ul
      class="fd-breadcrumb"
    >
      
        
      <li
        class="fd-breadcrumb__item"
      >
        
            
        <div
          class="fd-popover"
        >
          
                
          <div
            class="fd-popover__control"
          >
            
                    
            <div
              aria-controls="breadcrumb1"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="Show collapsed breadcrumbs"
              class="fd-link"
              onclick="onPopoverClick('breadcrumb1');"
              onkeypress="isSpaceOrEnter(event, onPopoverClick('breadcrumb1'));"
              role="button"
              tabindex="0"
            >
              
                        
              <span
                class="fd-link__content"
              >
                ...
              </span>
              
                        
              <i
                class="sap-icon sap-icon--slim-arrow-down"
                role="presentation"
              />
              
                    
            </div>
            
                
          </div>
          
                
          <div
            aria-hidden="false"
            class="fd-popover__body fd-popover__body--no-arrow"
            id="breadcrumb1"
          >
            
                    
            <div
              class="fd-popover__wrapper"
            >
              
                        
              <ul
                class="fd-list fd-list--navigation"
                role="menu"
              >
                
                            
                <li
                  class="fd-list__item fd-list__item--link"
                  role="menuitem"
                  tabindex="-1"
                >
                  
                                
                  <a
                    class="fd-list__link"
                    href="#"
                    tabindex="0"
                  >
                    
                                    
                    <span
                      class="fd-list__title"
                    >
                      Products
                    </span>
                    
                                
                  </a>
                  
                            
                </li>
                
                            
                <li
                  class="fd-list__item fd-list__item--link"
                  role="menuitem"
                  tabindex="-1"
                >
                  
                                
                  <a
                    class="fd-list__link"
                    href="#"
                    tabindex="0"
                  >
                    
                                    
                    <span
                      class="fd-list__title"
                    >
                      Suppliers
                    </span>
                    
                                
                  </a>
                  
                            
                </li>
                
                            
                <li
                  class="fd-list__item fd-list__item--link"
                  role="menuitem"
                  tabindex="-1"
                >
                  
                                
                  <a
                    class="fd-list__link"
                    href="#"
                    tabindex="0"
                  >
                    
                                    
                    <span
                      class="fd-list__title"
                    >
                      Titanium
                    </span>
                    
                                
                  </a>
                  
                            
                </li>
                
                        
              </ul>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </li>
      
        
      <li
        class="fd-breadcrumb__item"
      >
        <a
          class="fd-link"
          href="#"
          tabindex="0"
        >
          <span
            class="fd-link__content"
          >
            Ultra Portable
          </span>
        </a>
      </li>
      
        
      <li
        class="fd-breadcrumb__item"
      >
        <a
          class="fd-link"
          href="#"
          tabindex="0"
        >
          <span
            class="fd-link__content"
          >
            12 inch
          </span>
        </a>
      </li>
      
        
      <li
        class="fd-breadcrumb__item"
      >
        <a
          class="fd-link"
          href="#"
          tabindex="0"
        >
          <span
            class="fd-link__content"
          >
            Super portable deluxe
          </span>
        </a>
      </li>
      
        
      <li
        aria-current="page"
        class="fd-breadcrumb__item"
      >
        Laptop
      </li>
      
    
    </ul>
    

  </nav>
  

  <div
    style="height: 150px"
  />
  

</div>
`;

exports[`Storyshots Components/Breadcrumb Standard 1`] = `
<div
  dir="ltr"
>
  <nav
    aria-label="products breadcrumbs"
  >
    
    
    <ul
      class="fd-breadcrumb"
    >
      
        
      <li
        class="fd-breadcrumb__item"
      >
        <a
          class="fd-link"
          href="#"
          tabindex="0"
        >
          <span
            class="fd-link__content"
          >
            Products
          </span>
        </a>
      </li>
      
        
      <li
        class="fd-breadcrumb__item"
      >
        <a
          class="fd-link"
          href="#"
          tabindex="0"
        >
          <span
            class="fd-link__content"
          >
            Suppliers
          </span>
        </a>
      </li>
      
        
      <li
        class="fd-breadcrumb__item"
      >
        <a
          class="fd-link"
          href="#"
          tabindex="0"
        >
          <span
            class="fd-link__content"
          >
            Titanium
          </span>
        </a>
      </li>
      
        
      <li
        class="fd-breadcrumb__item"
      >
        <a
          class="fd-link"
          href="#"
          tabindex="0"
        >
          <span
            class="fd-link__content"
          >
            Ultra Portable
          </span>
        </a>
      </li>
      
        
      <li
        class="fd-breadcrumb__item"
      >
        <a
          class="fd-link"
          href="#"
          tabindex="0"
        >
          <span
            class="fd-link__content"
          >
            12 inch
          </span>
        </a>
      </li>
      
        
      <li
        class="fd-breadcrumb__item"
      >
        <a
          class="fd-link"
          href="#"
          tabindex="0"
        >
          <span
            class="fd-link__content"
          >
            Super portable deluxe
          </span>
        </a>
      </li>
      
        
      <li
        aria-current="page"
        class="fd-breadcrumb__item"
      >
        Laptop
      </li>
      
    
    </ul>
    

  </nav>
  

</div>
`;
